<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/message_help_text"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_insert_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_plus_box_white_24dp"
                android:drawableStart="@drawable/ic_plus_box_white_24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_add_contact_firstname"
                android:textStyle="normal"
                android:theme="@style/PrimaryButton"
                app:backgroundTint="@android:color/holo_blue_light"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_preview_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_eye_black_24dp"
                android:drawableStart="@drawable/ic_eye_black_24dp"
                android:text="@string/btn_preview"
                android:textColor="#222"
                android:theme="@style/PrimaryButton"
                app:backgroundTint="#fff"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <EditText
                android:id="@+id/message_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="sans-serif-light"
                android:gravity="start|top"
                android:hint="@string/hint_message"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:paddingBottom="10dip"
                android:paddingEnd="50dip"
                android:paddingLeft="10dip"
                android:paddingRight="50dip"
                android:paddingStart="10dip"
                android:paddingTop="10dip"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>